# cpe_code

./: .gitignore  .gitmodules  README.md  data_models\CPE232-HW1.ipynb
ai/: Manifest.toml  Project.toml  flake.nix  visualize.jl
ai/csp/: box.jl  box_result.txt  main.jl  sudoku.jl  sudoku_result.txt  zoo.jl  zoo_domains.jl
ai/decision_tree/: data.jl  main.jl  result.txt
ai/fol/: first_order_logic.md
ai/game_playing/: alpha_beta.jl  custom.jl  custom.txt  custom_flipped.txt  main.jl  minimax.jl  minimax_result.txt  nim.jl  nim211.txt  nim6.txt  nim_tree.txt  visualize.jl
ai/heuristic_search/: a_star.jl  a_star_result.txt  best_first.jl  bfs.jl  create_graph.jl  create_map.jl  dls.jl  gbfs_result.txt  graph_results.txt  ids.jl  (+4 more)
big_data/iots/: flake.nix  main.py  pyproject.toml
big_data/iots/assignments/__MACOSX/: ._assignment
big_data/iots/assignments/__MACOSX/assignment/: ._CPE371_datalog.csv  ._assignment1.ipynb  ._assignment2.ipynb
big_data/iots/assignments/assignment/: CPE371_datalog.csv  assignment1.ipynb  assignment1_reader.ipynb  assignment2-sub.ipynb  assignment2.ipynb
big_data/iots/examples/__MACOSX/: ._examples
big_data/iots/examples/__MACOSX/examples/: ._play_dweet.ipynb  ._play_mqtt_publisher.ipynb  ._play_mqtt_subscriber.ipynb
big_data/iots/examples/examples/: play_dweet.ipynb  play_mqtt_publisher.ipynb  play_mqtt_subscriber.ipynb
data_models/: CPE232-HW1-PythonBasic  CPE232-HW1-PythonBasic.ipynb  CPE232-HW2-DataType.ipynb  CPE232-Lab1  CPE232-Lab1-PythonBasic.ipynb  CPE232-Lab2-DataType.ipynb  README.md  flake.nix  jupyterlab-vim.nix
(+261 files in other folders)
