[project]
name = "iots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.7",
    "jupyterlab-vim>=4.1.4",
    "numpy>=2.3.3",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
]


